--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMPE0QYWWQ"></script>
+<script async src=`https://www.googletagmanager.com/gtag/js?id=${process.env.GOOGLE_TAG}`></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KMPE0QYWWQ');
+  gtag('config', `${process.env.GOOGLE_TAG}`);
 </script>
 
 
