--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
     </style>
 
 
+
 <!-- Google tag (gtag.js) -->
-<script async src=`https://www.googletagmanager.com/gtag/js?id=${process.env.GOOGLE_TAG}`></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JKDKL4GNSK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', `${process.env.GOOGLE_TAG}`);
+  gtag('config', 'G-JKDKL4GNSK');
 </script>
+
+
 
 
   </head>
