--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <body>
     <a
       class="px-10 text-white"
-      href="https://youtu.be/iyngFd6f8ko?feature=shared&t=2031">
+      href="https://youtu.be/iyngFd6f8ko?feature=shared&t=2356">
       The BEST way to do form validation in JavaScript
     </a>
 
@@ -113,6 +113,7 @@
                 <span class="error-icon hidden -ml-6 text-red-700 text-1.5xl"><i class="fa-solid fa-circle-exclamation"></i></span>
                 <span class="success-icon hidden  -ml-6 text-green-700 text-1.5xl"><i class="fa-solid fa-check"></i></span>
               </div>
+              <div class="error text-red-800 py-2"></div>
             </div>
 
             <div class="formGroup flex flex-col my-4">
@@ -127,12 +128,14 @@
                 <span class="error-icon hidden -ml-6 text-red-700 text-1.5xl"><i class="fa-solid fa-circle-exclamation"></i></span>
                 <span class="success-icon hidden  -ml-6 text-green-700 text-1.5xl"><i class="fa-solid fa-check"></i></span>
               </div>
+              <div class="error text-red-800 py-2"></div>
             </div>
 
             <div class="formGroup flex flex-col my-4">
               <label for="email">Email</label>
               <div>
                 <input   class="border-b-2 border-black outline-none py-2 w-full"
+                required
                 type="email"
                 id="email"
                 value=""
@@ -140,6 +143,7 @@
                 <span class="error-icon hidden -ml-6 text-red-700 text-1.5xl"><i class="fa-solid fa-circle-exclamation"></i></span>
                 <span class="success-icon hidden  -ml-6 text-green-700 text-1.5xl"><i class="fa-solid fa-check"></i></span>
               </div>
+              <div class="error text-red-800 py-2"></div>
             </div>
 
             <div class="formGroup flex flex-col my-4">
@@ -153,6 +157,7 @@
                 <span class="error-icon hidden -ml-6 text-red-700 text-1.5xl"><i class="fa-solid fa-circle-exclamation"></i></span>
                 <span class="success-icon hidden  -ml-6 text-green-700 text-1.5xl"><i class="fa-solid fa-check"></i></span>
               </div>
+              <div class="error text-red-800 py-2"></div>
             </div>
 
             <div class="formGroup flex flex-col my-4">
@@ -166,17 +171,17 @@
                 <span class="error-icon hidden -ml-6 text-red-700 text-1.5xl"><i class="fa-solid fa-circle-exclamation"></i></span>
                 <span class="success-icon hidden  -ml-6 text-green-700 text-1.5xl"><i class="fa-solid fa-check"></i></span>
               </div>
+              <div class="error text-red-800 py-2"></div>
             </div>
 
-            <div class="error text-red-800 py-2">das error div</div>
+            
             
             <button type="submit" class="px-8 py-2 mt-4 bg-green-400 w-full rounded-full text-white shadow-lg">Submit</button>
 
 
           </form>
 
-
-        <form></form>
+ 
       </div>
     </div>
     <script src="./script.js"></script>
