--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JKDKL4GNSK"></script>
+<script async src=`https://www.googletagmanager.com/gtag/js?id=${GTAG}`></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JKDKL4GNSK');
+  gtag('config', 'GTAG');
 </script>
 
 
